Fixes :
3239 : On Windows, server can't load jdmkrt.jar file 
3271 : SNMP: Each index of the dsApplIfProtocol entry should return unique identifier